fix archive page alignment isuue and create archive separate javascript file

--- a/style.css
+++ b/style.css
@@ -86,12 +86,12 @@ input#search-bar {
 .angle-icon {
   color: #334856;
 }
-.health-category {
+.inbox-category {
   display: flex;
   justify-content: space-between;
   gap: 10px;
 }
-.health-category i {
+.inbox-category i {
   color: #d97d54;
 }
 .angle-icon {
@@ -127,14 +127,28 @@ input#search-bar {
   padding: 30px;
   color: #fff;
 }
-.archive-swipe {
-  display: none;
-}
 .article-about-surfing1 {
   width: 100%;
   display: block;
   padding: 30px;
   border-bottom: 1px solid gray;
+}
+/* archive page */
+.archive-category {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+.archive-collaps {
+  width: 100%;
+  height: 0;
+  display: flex;
+  justify-content: space-between;
+  padding: 30px;
+  border-bottom: 1px solid gray;
+}
+.archive-category i {
+  color: #d97d54;
 }
 /* setting page */
 
